# rust-api-architecture-sample

./: Cargo.toml  README.md  diesel.toml  docker-compose.yml
environment/local/: Dockerfile.mysql
migrations/2021-01-10-130452_create_documents/: up.sql
src/: main.rs
src/domains/: documents.rs  mod.rs
src/infrastructures/database/: schema.rs
src/infrastructures/repository/: documents.rs
src/server/: handlers.rs  mod.rs  request.rs  response.rs
src/usecases/: documents.rs
