[package]
name = "sample-api"
version = "0.1.0"
authors = ["kz_morita <kz.morit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3.9"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.61"
dotenv = "0.15.0"
chrono = "0.4"
failure = "0.1.8"

[dependencies.diesel]
features = ["mysql", "chrono", "r2d2"]
version = "1.4.5"
